# CLAUDECODE

./: README.md
Claude_Code_Full_Course/: .gitignore  .mcp.json  1_llm_call.ipynb  MIGRATION_REPORT.md  README.md  URLs.md  create_dataframe.py  create_sample_dataframe.py  fetch_api_data.py  generate_dataframe.py  my_notes.md  pyproject.toml
Claude_Code_Full_Course/.claude/: CLAUDE.md  settings.json
Claude_Code_Full_Course/.claude/agent-memory/code_reviewer/: MEMORY.md  feedback_visualization_patterns.md  pattern_code_duplication.md
Claude_Code_Full_Course/.claude/agents/code_reviewer/: code_reviewer.md
Claude_Code_Full_Course/.claude/agents/code_reviewer/logs/: code_review_2026-03-13_11-09-39.md
Claude_Code_Full_Course/.claude/agents/orchestrator/: orchestrator.md
Claude_Code_Full_Course/.claude/hooks/: post_script.py  post_script.txt  pre_script.py  pre_script.txt
Claude_Code_Full_Course/.claude/skills/fetchAPI/: SKILL.md
Claude_Code_Full_Course/.claude/skills/migrate/: SKILL.md
Claude_Code_Full_Course/.claude/skills/migrate/data/2026-03-12_18-58-29/: dim_customer.parquet  dim_date.parquet  dim_product.parquet  dim_store.parquet  fact_returns.parquet  fact_sales.parquet
Claude_Code_Full_Course/.claude/skills/migrate/scripts/: convert_to_parquet.py  migrate.py
Claude_Code_Full_Course/.claude/skills/visualize/: SKILL.md
Claude_Code_Full_Course/.claude/skills/visualize/Scripts/: visualize_data.py
Claude_Code_Full_Course/Airflow_Project/: README.md
Claude_Code_Full_Course/Airflow_Project/dags/: data_fetch.py  data_report.py
