[project]
name = "claudecode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
